Updated: Update UI

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,3 +6,11 @@
   /* background-color: #f2f1f1; */
   font-family: -apple-system, system-ui, BlinkMacSystemFont;
 }
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  -ms-overflow-style: none; /* For Internet Explorer 10+ */
+  scrollbar-width: none; /* For Firefox */
+}
